--- a/css/style.css
+++ b/css/style.css
@@ -278,7 +278,7 @@ img {
     background-color: #000;
     left: 0;
     top: 48px;
-    transition: all 0.6s;
+    transition: visibility 0.6s, opacity 0.6;
     visibility: hidden;
     opacity: 0;
   }
